--- a/rush.yaml
+++ b/rush.yaml
@@ -59,7 +59,7 @@ series:
 - Sevens Road
 images:
 - index: 1
-  image: SevensRoadMagician-RDSST1-JP-C.png
+  image: SevensRoadMagician-RDMRP2-JP-C.png
   illustration: SevensRoadMagician-DBR-JP-VG-artwork.png
 - index: 2
   image: SevensRoadMagician-RDAKG1-JP-UR.png
@@ -725,7 +725,7 @@ atk: 0
 def: 1400
 images:
 - index: 1
-  image: StrayngeCat-RDSBD1-JP-C.png
+  image: StrayngeCat-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ST01-JP010
@@ -949,7 +949,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: DarkRevelation-RDGRP1-JP-SR.png
+  image: DarkRevelation-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/ST01-JP013
@@ -1121,7 +1121,7 @@ series:
 - Strike Dragon
 images:
 - index: 1
-  image: MultistrikeDragonDragias-RDSST1-JP-C.png
+  image: MultistrikeDragonDragias-RDMRP2-JP-R.png
   illustration: MultistrikeDragonDragias-DBR-JP-VG-artwork.png
 - index: 2
   image: MultistrikeDragonDragias-RDAKG2-JP-UR.png
@@ -1721,7 +1721,7 @@ atk: 500
 def: 500
 images:
 - index: 1
-  image: PhoenixDragon-RDSD0A-JP-C.png
+  image: PhoenixDragon-RDMRP2-JP-ScR.png
 sets:
   ja:
   - set_number: RD/ST02-JP009
@@ -1875,7 +1875,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: DragonicPressure-RDSD0A-JP-C.png
+  image: DragonicPressure-RDMRP2-JP-ScR.png
 sets:
   ja:
   - set_number: RD/ST02-JP011
@@ -2199,7 +2199,7 @@ series:
 - Sevens Road
 images:
 - index: 1
-  image: SevensRoadWitch-RDKP01-JP-UR.png
+  image: SevensRoadWitch-RDMRP2-JP-C.png
   illustration: SevensRoadWitch-DBR-JP-VG-artwork.png
 - index: 2
   image: SevensRoadWitch-RD711A-JP-NPR.png
@@ -2876,7 +2876,7 @@ atk: 2300
 def: 0
 images:
 - index: 1
-  image: DragonicSlayer-RDSBD2-JP-C.png
+  image: DragonicSlayer-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP01-JP026
@@ -3142,7 +3142,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: PrimaGuitarnatheShiningSuperstar-RDMRP1-JP-C.png
+  image: PrimaGuitarnatheShiningSuperstar-RDMRP2-JP-C.png
   illustration: PrimaGuitarnatheShiningSuperstar-DBR-JP-VG-artwork.png
 - index: '1.1'
   image: PrimaGuitarnatheShiningSuperstar-RDKP01-KR-UR.png
@@ -3150,7 +3150,7 @@ images:
 - index: 2
   image: PrimaGuitarnatheShiningSuperstar-RDCCC1-JP-NPR.png
 - index: 3
-  image: PrimaGuitarnatheShiningSuperstar-RDMRP2-JP-OP-AA.png
+  image: PrimaGuitarnatheShiningSuperstar-RDMRP2-JP-ORR.png
 sets:
   ja:
   - set_number: RD/KP01-JP028
@@ -3261,10 +3261,10 @@ series:
 - Three Rulers
 images:
 - index: 1
-  image: YamirulertheDarkDelayer-RDSBD3-JP-C.png
+  image: YamirulertheDarkDelayer-RDMRP2-JP-C.png
   illustration: YamirulertheDarkDelayer-DBR-JP-VG-artwork.png
 - index: 2
-  image: YamirulertheDarkDelayer-RDMRP2-JP-OP-AA.png
+  image: YamirulertheDarkDelayer-RDMRP2-JP-ORR.png
 sets:
   ja:
   - set_number: RD/KP01-JP029
@@ -4113,7 +4113,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: RecoveryForce-RDSBD1-JP-C.png
+  image: RecoveryForce-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP01-JP038
@@ -6422,7 +6422,7 @@ def: 2100
 legend: true
 images:
 - index: 1
-  image: DarkMagician-RDP004-JP-ScR.png
+  image: DarkMagician-RDMRP2-JP-R.png
   illustration: DarkMagician-DBR-JP-VG-artwork.png
 - index: 2
   image: DarkMagician-RDGRP1-JP-ScR.png
@@ -7407,7 +7407,7 @@ series:
 - Sevens Road
 images:
 - index: 1
-  image: SevensRoadMage-RDMRP1-JP-C.png
+  image: SevensRoadMage-RDMRP2-JP-ScR.png
   illustration: SevensRoadMage-DBR-JP-VG-artwork.png
 - index: 2
   image: SevensRoadMage-RD711A-JP-NPR.png
@@ -7502,7 +7502,7 @@ atk: 2200
 def: 1000
 images:
 - index: 1
-  image: LightningVoltcondor-RDKP02-JP-RR.png
+  image: LightningVoltcondor-RDMRP2-JP-R.png
 sets:
   ja:
   - set_number: RD/KP02-JP017
@@ -7990,7 +7990,7 @@ series:
 - Psychic Musician
 images:
 - index: 1
-  image: Romanpick-RDMRP1-JP-C.png
+  image: Romanpick-RDMRP2-JP-ScR.png
 sets:
   ja:
   - set_number: RD/KP02-JP023
@@ -8422,7 +8422,7 @@ series:
 - Beast Gear
 images:
 - index: 1
-  image: BeastGearEmperorCatapultKong-RDKP02-JP-SR.png
+  image: BeastGearEmperorCatapultKong-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP02-JP028
@@ -9359,7 +9359,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: ThousandKnives-RDB004-JP-C.png
+  image: ThousandKnives-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP02-JP040
@@ -9438,7 +9438,7 @@ series:
 - Signature move
 images:
 - index: 1
-  image: DarkMagicAttack-RDB004-JP-C.png
+  image: DarkMagicAttack-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP02-JP041
@@ -11885,7 +11885,7 @@ series:
 - Three Rulers
 images:
 - index: 1
-  image: KimerulertheDarkRaider-RDSBD3-JP-C.png
+  image: KimerulertheDarkRaider-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/CP01-JP001
@@ -12456,7 +12456,7 @@ property: Normal
 legend: true
 images:
 - index: 1
-  image: ShieldSword-RDCP01-JP-ScR.png
+  image: ShieldSword-RDMRP2-JP-R.png
 sets:
   ja:
   - set_number: RD/CP01-JP009
@@ -16746,7 +16746,7 @@ series:
 - Beast Gear
 images:
 - index: 1
-  image: BeastGearKingConvoyLiogon-RDKP03-JP-UR.png
+  image: BeastGearKingConvoyLiogon-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP03-JP031
@@ -24067,7 +24067,7 @@ series:
 - Three Rulers
 images:
 - index: 1
-  image: SemerulertheDarkSummoner-RDSBD3-JP-C.png
+  image: SemerulertheDarkSummoner-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP04-JP020
@@ -26613,7 +26613,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: SwordShield-RDKP04-JP-SR.png
+  image: SwordShield-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP04-JP052
@@ -41259,7 +41259,7 @@ atk: 1600
 def: 1700
 images:
 - index: 1
-  image: AccelWonderSplat-RDSBD1-JP-C.png
+  image: AccelWonderSplat-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD1-JP009
@@ -41327,7 +41327,7 @@ atk: 1700
 def: 1600
 images:
 - index: 1
-  image: AccelWonderFlare-RDSBD1-JP-C.png
+  image: AccelWonderFlare-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD1-JP010
@@ -41453,7 +41453,7 @@ atk: 0
 def: 1000
 images:
 - index: 1
-  image: AmazingDealer-RDB222-JP-C.png
+  image: AmazingDealer-RDMRP2-JP-R.png
 sets:
   ja:
   - set_number: RD/SBD1-JP019
@@ -47944,7 +47944,7 @@ atk: 0
 def: 1400
 images:
 - index: 1
-  image: NeedlkyrietheCelestialSeamstress-RDGRC1-JP-SR.png
+  image: NeedlkyrietheCelestialSeamstress-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP001
@@ -48781,7 +48781,7 @@ atk: 0
 def: 200
 images:
 - index: 1
-  image: MezametheRingingAlarm-RDKP07-JP-SR.png
+  image: MezametheRingingAlarm-RDMRP2-JP-R.png
 sets:
   ja:
   - set_number: RD/KP07-JP015
@@ -51407,7 +51407,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: ShipofSevenTreasures-RDLGP1-JP-ScR.png
+  image: ShipofSevenTreasures-RDMRP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP07-JP052
@@ -52841,7 +52841,7 @@ series:
 - Three Rulers
 images:
 - index: 1
-  image: KimeterasutheRisingLuna-RDGRP1-JP-UR.png
+  image: KimeterasutheRisingLuna-RDMRP2-JP-ScR.png
 sets:
   ja:
   - set_number: RD/GRP1-JP011
@@ -95275,7 +95275,7 @@ series:
 - Skysavior
 images:
 - index: 1
-  image: SkysaviorWatch-RDKP12-JP-SR.png
+  image: SkysaviorWatch-RDMRP2-JP-ScR.png
 sets:
   ja:
   - set_number: RD/KP12-JP053
@@ -116760,6 +116760,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -116878,6 +116879,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -117360,6 +117362,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -117502,6 +117505,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
@@ -117881,6 +117885,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   text:
     en: true
@@ -119001,6 +119006,7 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
