--- a/data/rush/18635.yaml
+++ b/data/rush/18635.yaml
@@ -21,7 +21,7 @@ requirement:
   it:
   pt:
   ja: |-
-    手札のモンスター（戦士族または天使族）を合計２体相手に見せて発動できる。
+    手札のモンスター（戦士族・天使族）を合計２体相手に見せて発動できる。
   ko: |-
     패의 몬스터(전사족 또는 천사족)를 합계 2장 상대에게 보여주고 발동할 수 있다.
   zh-TW:
