--- a/data/rush/19594.yaml
+++ b/data/rush/19594.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19594
 name:
   en: Apocalypse - Beast Over World
   de:
@@ -44,7 +44,7 @@ series:
 - Beast Gear
 images:
 - index: 1
-  image: ApocalypseBeastOverWorld-RDMRP2-JP-OP.png
+  image: ApocalypseBeastOverWorld-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP2-JP078
