--- a/data/rush/19596.yaml
+++ b/data/rush/19596.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19596
 name:
   en: Obsidian Magical Soldier
   de:
@@ -48,7 +48,7 @@ atk: 2500
 def: 1400
 images:
 - index: 1
-  image: ObsidianMagicalSoldier-RDMRP2-JP-OP.png
+  image: ObsidianMagicalSoldier-RDMRP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/MRP2-JP081
