--- a/data/rush/19600.yaml
+++ b/data/rush/19600.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19600
 name:
   en: Spell Extraction
   de:
@@ -42,7 +42,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: SpellExtraction-RDMRP2-JP-OP.png
+  image: SpellExtraction-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP2-JP085
