--- a/data/rush/19595.yaml
+++ b/data/rush/19595.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19595
 name:
   en: Swordawn Magician
   de:
@@ -62,7 +62,7 @@ atk: 2500
 def: 1500
 images:
 - index: 1
-  image: SwordawnMagician-RDMRP2-JP-OP.png
+  image: SwordawnMagician-RDMRP2-JP-UR.png
 sets:
   ja:
   - set_number: RD/MRP2-JP080
