--- a/data/rush/19597.yaml
+++ b/data/rush/19597.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19597
 name:
   en: Mature Dark Magician
   de:
@@ -46,7 +46,7 @@ atk: 900
 def: 700
 images:
 - index: 1
-  image: MatureDarkMagician-RDMRP2-JP-OP.png
+  image: MatureDarkMagician-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP2-JP082
