--- a/data/rush/19598.yaml
+++ b/data/rush/19598.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19598
 name:
   en: Jewel of the Dark Magician
   de:
@@ -42,7 +42,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: JeweloftheDarkMagician-RDMRP2-JP-OP.png
+  image: JeweloftheDarkMagician-RDMRP2-JP-SR.png
 sets:
   ja:
   - set_number: RD/MRP2-JP083
