--- a/data/rush/19599.yaml
+++ b/data/rush/19599.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19599
 name:
   en: Spellbook Rejection
   de:
@@ -42,7 +42,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: SpellbookRejection-RDMRP2-JP-OP.png
+  image: SpellbookRejection-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP2-JP084
