--- a/data/rush/19601.yaml
+++ b/data/rush/19601.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19601
 name:
   en: Magician's Sense
   de:
@@ -42,7 +42,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: MagiciansSense-RDMRP2-JP-OP.png
+  image: MagiciansSense-RDMRP2-JP-C.png
 sets:
   ja:
   - set_number: RD/MRP2-JP088
