--- a/data/cards/09674034.yaml
+++ b/data/cards/09674034.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Freixo Olho de Cobra
   ja: スネークアイ・エクセル
   ja_romaji: Sunēkuai Ekuseru
   ko: 스네이크아이 엑셀
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 monstro de FOGO de Nível 1 do seu Deck à sua mão. Você pode enviar 2 cards com a face para cima que você controla para o Cemitério, incluindo este card; Invoque por Invocação-Especial 1 monstro "Olho de Cobra" da sua mão ou do Deck, exceto "Freixo Olho de Cobra". Você só pode usar cada efeito de "Freixo Olho de Cobra" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合に発動できる。デッキから炎属性・レベル１モンスター１体を手札に加える。②：このカードを含む自分フィールドの表側表示カード２枚を墓地へ送って発動できる。手札・デッキから「スネークアイ・エクセル」以外の「スネークアイ」モンスター１体を特殊召喚する。
   ko: |-
