--- a/data/cards/10113611.yaml
+++ b/data/cards/10113611.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Wattum
   ja: エレキハダマグロ
   ja_romaji: Erekihadamaguro
   ko: 일렉황다랑어
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Este card pode atacar diretamente. Você só pode usar cada um dos seguintes efeitos de "Wattum" uma vez por turno. No final da Etapa de Dano, se um monstro seu causar dano de batalha ao seu oponente: você pode Invocar este card por Invocação-Especial da sua mão. Quando este card causar dano de batalha ao seu oponente em um ataque direto: você pode oferecer como Tributo este card no campo e 1 ou mais monstros não-Reguladores da sua mão e/ou do campo com a face para cima e Invocar por Invocação-Especial 1 Monstro Sincro "Watt" do seu Deck Adicional cujo Nível seja igual à soma dos Níveis desses monstros oferecidos como Tributo.
   ja: |-
     このカード名の①③の効果はそれぞれ１ターンに１度しか使用できない。①：自分のモンスターが相手に戦闘ダメージを与えたダメージステップ終了時に発動できる。このカードを手札から特殊召喚する。②：このカードは直接攻撃できる。③：このカードが直接攻撃で相手に戦闘ダメージを与えた時に発動できる。このカードと、チューナー以外の自分の手札・フィールド（表側表示）のモンスター１体以上をリリースし、リリースしたモンスターのレベルの合計と同じレベルを持つ「エレキ」Ｓモンスター１体をＥＸデッキから特殊召喚する。
   ko: |-
