--- a/data/cards/45663742.yaml
+++ b/data/cards/45663742.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Carvalho Olho de Cobra
   ja: スネークアイ・オーク
   ja_romaji: Sunēkuai Ōku
   ko: 스네이크아이 오크
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se este card for Invocado por Invocação-Normal ou Especial: você pode escolher 1 dos seus monstros de FOGO de Nível 1 que estiverem banidos ou no seu Cemitério; adicione-o à sua mão ou Invoque-o por Invocação-Especial. Você pode enviar 2 cards com a face para cima que você controla para o Cemitério, incluindo este card; Invoque por Invocação-Especial 1 monstro "Olho de Cobra" da sua mão ou do Deck, exceto "Carvalho Olho de Cobra". Você só pode usar cada efeito de "Carvalho Olho de Cobra" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚した場合、自分の墓地・除外状態の炎属性・レベル１モンスター１体を対象として発動できる。そのモンスターを手札に加えるか特殊召喚する。②：このカードを含む自分フィールドの表側表示カード２枚を墓地へ送って発動できる。手札・デッキから「スネークアイ・オーク」以外の「スネークアイ」モンスター１体を特殊召喚する。
   ko: |-
