--- a/data/cards/47330808.yaml
+++ b/data/cards/47330808.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Hapi, a Orientação de Horus
   ja: ホルスの<ruby>先<rt>せん</rt></ruby><ruby>導<rt>どう</rt></ruby>－ハーピ
   ja_romaji: Horusu no Sendō - Hāpi
   ko: 호루스의 선도－하피
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se você controlar "Sarcófago do Rei", você pode Invocar este card por Invocação-Especial (do seu Cemitério). Você só pode Invocar "Hapi, a Orientação de Horus" por Invocação-Especial uma vez por turno desta forma. Se um ou mais outros cards que você controla deixarem o campo por um efeito de card do oponente, enquanto este card estiver na sua Zona de Monstros (exceto durante a Etapa de Dano): você pode escolher 2 cards que estiverem banidos e/ou nos Cemitérios; adicione os dois à mão ou embaralhe os dois no Deck. Você só pode usar este efeito de "Hapi, a Orientação de Horus" uma vez por turno.
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：自分フィールドに「王の棺」が存在する場合、このカードは墓地から特殊召喚できる。②：このカードがモンスターゾーンに存在する状態で、自分フィールドの他のカードが相手の効果でフィールドから離れた場合、お互いの墓地・除外状態のカードの中から合計２枚を対象として発動できる。そのカード２枚を持ち主の手札に加えるかそのカード２枚をデッキに戻す。
   ko: |-
