--- a/data/cards/48452496.yaml
+++ b/data/cards/48452496.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Dragão Flambérgia Olho de Cobra
   ja: <ruby>蛇眼の炎龍<rt>スネークアイズ・フランベルジュ・ドラゴン</rt></ruby>
   ja_romaji: Sunēkuaizu Furanberuju Doragon
   ko: 스네이크아이즈 플랑베르쥬 드래곤
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Você pode escolher 1 monstro com a face para cima no campo ou em qualquer Cemitério; coloque-o com a face para cima na Zona de Magias & Armadilhas do seu dono como uma Magia Contínua. Durante o turno do seu oponente (Efeito Rápido): você pode escolher 1 Card de Monstro que é considerado como uma Magia Contínua no campo; Invoque-o por Invocação-Especial no seu campo. Se este card for enviado da mão ou do campo para o Cemitério: você pode Invocar por Invocação-Especial 2 monstros de FOGO de Nível 1 do seu Cemitério. Você só pode usar cada efeito de "Dragão Flambérgia Olho de Cobra" uma vez por turno.
   ja: |-
     このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分か相手のフィールド（表側表示）・墓地のモンスター１体を対象として発動できる。そのモンスターを永続魔法カード扱いで元々の持ち主の魔法＆罠ゾーンに表側表示で置く。②：相手ターンに、フィールドの永続魔法カード扱いのモンスターカード１枚を対象として発動できる。そのカードを自分フィールドに特殊召喚する。③：このカードが手札・フィールドから墓地へ送られた場合に発動できる。自分の墓地から炎属性・レベル１モンスター２体を特殊召喚する。
   ko: |-
