--- a/data/cards/84941194.yaml
+++ b/data/cards/84941194.yaml
@@ -6,9 +6,9 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Imseti, a Glória de Horus
   ja: ホルスの<ruby>栄<rt>えい</rt></ruby><ruby>光<rt>こう</rt></ruby>－イムセティ
-  ja_romaji: Horusu no Eikō - Imuseti
+  ja_romaji:
   ko: 호루스의 영광－임세티
   ko_rr:
   zh-TW:
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se você controlar "Sarcófago do Rei", você pode Invocar este card por Invocação-Especial (do seu Cemitério). Você só pode Invocar "Imseti, a Glória de Horus" por Invocação-Especial uma vez por turno desta forma. Você só pode usar cada um dos seguintes efeitos de "Imseti, a Glória de Horus" uma vez por turno. Você pode enviar 2 cards da sua mão para o Cemitério, incluindo este card; adicione 1 "Sarcófago do Rei" do seu Deck à sua mão e, depois, você pode comprar 1 card. Se um ou mais outros cards que você controla deixarem o campo por um efeito de card do oponente, enquanto este card estiver na sua Zona de Monstros (exceto durante a Etapa de Dano): você pode enviar 1 card no campo para o Cemitério.
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに「王の棺」が存在する場合、このカードは墓地から特殊召喚できる。②：このカードを含む手札を２枚墓地へ送って発動できる。デッキから「王の棺」１枚を手札に加える。その後、自分は１枚ドローできる。③：このカードがモンスターゾーンに存在する状態で、自分フィールドの他のカードが相手の効果でフィールドから離れた場合に発動できる。フィールドのカード１枚を墓地へ送る。
   ko: |-
