--- a/data/cards/11335209.yaml
+++ b/data/cards/11335209.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Duamutefe, a Bênção de Horus
   ja: ホルスの<ruby>祝<rt>しゅく</rt></ruby><ruby>福<rt>ふく</rt></ruby>－ドゥアムテフ
   ja_romaji: Horusu no Shukufuku - Duamutefu
   ko: 호루스의 축복－두아무테프
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se você controlar "Sarcófago do Rei", você pode Invocar este card por Invocação-Especial (do seu Cemitério). Você só pode Invocar "Duamutefe, a Bênção de Horus" por Invocação-Especial uma vez por turno desta forma. Ganha 1200 de ATK/DEF para cada monstro "Horus" que você controla. Se um ou mais outros cards que você controla deixarem o campo por um efeito de card do oponente, enquanto este card estiver na sua Zona de Monstros (exceto durante a Etapa de Dano): você pode comprar cards igual ao número de monstros com nomes diferentes na sua Zona de Monstros Principal. Você só pode usar este efeito de "Duamutefe, a Bênção de Horus" uma vez por turno.
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、③の効果は１ターンに１度しか使用できない。①：自分フィールドに「王の棺」が存在する場合、このカードは墓地から特殊召喚できる。②：このカードの攻撃力・守備力は、自分フィールドの「ホルス」モンスターの数×１２００アップする。③：このカードがモンスターゾーンに存在する状態で、自分フィールドの他のカードが相手の効果でフィールドから離れた場合に発動できる。自分のメインモンスターゾーンのモンスターの種類の数だけ、自分はドローする。
   ko: |-
