--- a/data/cards/12058741.yaml
+++ b/data/cards/12058741.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Bétula Olho de Cobra
   ja: スネークアイ・ワイトバーチ
   ja_romaji: Sunēkuai Waito Bāchi
   ko: 스네이크아이 와이트버치
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se você controlar um monstro de FOGO, você pode Invocar este card por Invocação-Especial (da sua mão). Você só pode Invocar "Bétula Olho de Cobra" por Invocação-Especial uma vez por turno desta forma. Durante o turno do seu oponente (Efeito Rápido): você pode enviar 2 cards com a face para cima que você controla para o Cemitério, incluindo este card; Invoque por Invocação-Especial 1 monstro "Olho de Cobra" da sua mão ou do Deck, exceto "Bétula Olho de Cobra". Você só pode usar este efeito de "Bétula Olho de Cobra" uma vez por turno.
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：自分フィールドに炎属性モンスターが存在する場合、このカードは手札から特殊召喚できる。②：相手ターンに、このカードを含む自分フィールドの表側表示カード２枚を墓地へ送って発動できる。手札・デッキから「スネークアイ・ワイトバーチ」以外の「スネークアイ」モンスター１体を特殊召喚する。
   ko: |-
