--- a/data/cards/46518210.yaml
+++ b/data/cards/46518210.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Nephilabyss, o Suserano Ogdoádico
   ja: <ruby>溟<rt>めい</rt></ruby><ruby>界<rt>かい</rt></ruby><ruby>神<rt>しん</rt></ruby>－ネフェルアビス
   ja_romaji: Meikaishin - Neferuabisu
   ko: 명세계신－네페르어비스
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se um ou mais monstros forem enviados da mão ou do Deck para o Cemitério, enquanto este card estiver no seu Cemitério (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial e, além disso, você não pode Invocar monstros por Invocação-Especial até o final do próximo turno, exceto monstros Réptil. Se você controlar este card que foi Invocado por Invocação-Especial do Cemitério: você pode escolher 1 monstro no seu Cemitério, exceto "Nephilabyss, o Suserano Ogdoádico"; Invoque-o por Invocação-Especial. Você só pode usar cada efeito de "Nephilabyss, o Suserano Ogdoádico" uma vez por turno.
   ja: |-
     このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが墓地に存在する状態で、自分か相手の手札・デッキからモンスターが墓地へ送られた場合に発動できる。このカードを特殊召喚する。この効果の発動後、次のターンの終了時まで自分は爬虫類族モンスターしか特殊召喚できない。②：このカードが墓地から特殊召喚されている場合、「溟界神－ネフェルアビス」以外の自分の墓地のモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
