--- a/data/cards/74725513.yaml
+++ b/data/cards/74725513.yaml
@@ -6,7 +6,7 @@ name:
   es:
   fr:
   it:
-  pt:
+  pt: Quebesenuefe, a Proteção de Horus
   ja: ホルスの<ruby>加<rt>か</rt></ruby><ruby>護<rt>ご</rt></ruby>－ケベンセヌフ
   ja_romaji: Horusu no Kago - Kebensenufu
   ko: 호루스의 가호－케벤세누프
@@ -20,7 +20,8 @@ text:
   es:
   fr:
   it:
-  pt:
+  pt: |-
+    Se você controlar "Sarcófago do Rei", você pode Invocar este card por Invocação-Especial (do seu Cemitério). Você só pode Invocar "Quebesenuefe, a Proteção de Horus" por Invocação-Especial uma vez por turno desta forma. Se um ou mais outros cards que você controla deixarem o campo por um efeito de card do oponente, enquanto este card estiver na sua Zona de Monstros (exceto durante a Etapa de Dano): você pode ativar este efeito; neste turno, os monstros do seu oponente não podem escolher monstros "Horus" como alvo de ataques e, além disso, seu oponente não pode escolher monstros "Horus" no campo como alvo de efeitos de card. Você só pode usar este efeito de "Quebesenuefe, a Proteção de Horus" uma vez por turno.
   ja: |-
     このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、②の効果は１ターンに１度しか使用できない。①：自分フィールドに「王の棺」が存在する場合、このカードは墓地から特殊召喚できる。②：このカードがモンスターゾーンに存在する状態で、自分フィールドの他のカードが相手の効果でフィールドから離れた場合に発動できる。このターン、相手モンスターは「ホルス」モンスターを攻撃対象にできず、相手はフィールドの「ホルス」モンスターを効果の対象にできない。
   ko: |-
