--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -1451,17 +1451,17 @@
   zh-TW: 發條
   zh-CN:
 - en: Sinful Spoils
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Sündhafte Beute
+  es: Botín del Pecado
+  fr: Butin du Péché
+  it: Spoglie del Peccato
+  pt: Despojos do Pecado
   ja: <ruby>罪<rt>ざい</rt></ruby><ruby>宝<rt>ほう</rt></ruby>
   ja_romaji: Zaihō
-  ko:
+  ko: 죄보
   ko_rr:
   zh-TW:
-  zh-CN:
+  zh-CN: 罪宝
 - en: Generaider
   de: Generaider
   es: Geneincursor/a
