--- a/data/rush/19114.yaml
+++ b/data/rush/19114.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have another face-up Warrior Type monster on your field during the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and you have a face-up Warrior Type monster other than this card on your field.
   de:
   es:
   fr:
