--- a/data/rush/17291.yaml
+++ b/data/rush/17291.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You Normal Summoned this card this turn and have a face-up WIND Attribute Normal Monster on your field.
+    You Normal Summoned this card this turn and you have a face-up WIND Attribute Normal Monster on your field.
   de:
   es:
   fr:
