--- a/data/rush/17517.yaml
+++ b/data/rush/17517.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up EARTH Attribute Machine Type monster on your field, send the top 2 cards of your Deck to the Graveyard.
+    If you have a face-up EARTH Attribute Machine Type monster on your field other than this card, send the top 2 cards of your Deck to the Graveyard.
   de:
   es:
   fr:
