--- a/data/rush/17878.yaml
+++ b/data/rush/17878.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card and show it. Then, if that card is a Field Spell Card, gain 1000 LP.
+    Draw 1 card and show it. If that card is a Field Spell Card, gain 1000 LP.
   de:
   es:
   fr:
