--- a/data/rush/17948.yaml
+++ b/data/rush/17948.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You Normal Summoned this card this turn and have another face-up Dragon Type monster on your field.
+    You Normal Summoned this card this turn and you have a face-up Dragon Type monster other than this card on your field.
   de:
   es:
   fr:
