--- a/data/rush/18265.yaml
+++ b/data/rush/18265.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up Level 5 Zombie Type monster on your field, pay 500 LP.
+    If you have a face-up Level 5 Zombie Type monster on your field other than this card, pay 500 LP.
   de:
   es:
   fr:
