--- a/data/rush/18356.yaml
+++ b/data/rush/18356.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have another face-up LIGHT Attribute Machine Type monster on your field.
+    You have a face-up LIGHT Attribute Machine Type monster other than this card on your field.
   de:
   es:
   fr:
