--- a/data/rush/18400.yaml
+++ b/data/rush/18400.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have another face-up LIGHT Attribute monster with 1400 or less ATK on your field.
+    You have a face-up LIGHT Attribute monster with 1400 or less ATK other than this card on your field.
   de:
   es:
   fr:
@@ -47,8 +47,8 @@ level: 4
 atk: 1400
 def: 200
 series:
-- Transamu
 - Signature move
+- Transamu
 images:
 - index: 1
   image: TransamuRainacWarToZen-RDDD02-JP-ScR.png
