--- a/data/rush/19136.yaml
+++ b/data/rush/19136.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 3 cards and show them. Then, if a Level 7 or higher monster is among them, you can Special Summon any number of those Level 7 or higher monsters to your field in face-down Defense Position.
+    Draw 3 cards and show them. If a Level 7 or higher monster is among them, you can Special Summon any number of those Level 7 or higher monsters to your field in face-down Defense Position.
   de:
   es:
   fr:
