--- a/data/rush/19315.yaml
+++ b/data/rush/19315.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 3 or more Galaxy Type monsters in your Graveyard during your Main Phase this card was Normal or Special Summoned.
+    You have 3 or more Galaxy Type monsters in your Graveyard during your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
