--- a/data/rush/19428.yaml
+++ b/data/rush/19428.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned, send 2 face-up Level 4 or lower Effect Monsters from your field to the Graveyard.
+    During your Main Phase that you Normal Summoned or Special Summoned this card, send 2 face-up Level 4 or lower Effect Monsters from your field to the Graveyard.
   de:
   es:
   fr:
