--- a/data/rush/19583.yaml
+++ b/data/rush/19583.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
