--- a/rush.yaml
+++ b/rush.yaml
@@ -56101,7 +56101,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You Normal Summoned this card this turn and have a face-up WIND Attribute Normal Monster on your field.
+    You Normal Summoned this card this turn and you have a face-up WIND Attribute Normal Monster on your field.
   de:
   es:
   fr:
@@ -62274,7 +62274,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up EARTH Attribute Machine Type monster on your field, send the top 2 cards of your Deck to the Graveyard.
+    If you have a face-up EARTH Attribute Machine Type monster on your field other than this card, send the top 2 cards of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -64146,7 +64146,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw until you have 5 cards in your hand and reveal all cards in your hand. Then, if there is a monster(s) among them, gain LP equal to [the number of those monsters] x 200.
+    Draw until you have 5 cards in your hand and reveal all cards in your hand to your opponent. If there is a monster(s) among them, gain LP equal to [the number of those monsters] x 200.
   de:
   es:
   fr:
@@ -68846,7 +68846,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up Omega Psychic or Psychic Type monster on your field, send the top card of your Deck to the Graveyard.
+    If you have a face-up Omega Psychic or Psychic Type monster on your field other than this card, send the top card of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -71038,7 +71038,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up Zombie Type monster on your field, send this face-up card from your field to the Graveyard.
+    If you have a face-up Zombie Type monster on your field other than this card, send this face-up card from your field to the Graveyard.
   de:
   es:
   fr:
@@ -74256,7 +74256,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card and show it. Then, if that card is a Field Spell Card, gain 1000 LP.
+    Draw 1 card and show it. If that card is a Field Spell Card, gain 1000 LP.
   de:
   es:
   fr:
@@ -74327,7 +74327,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, if you activated this effect during your Main Phase that you Normal or Special Summoned this card, you can Special Summon 1 Level 6 or lower Beast-Warrior Type Normal Monster from your Graveyard face-up to your field.
+    Send the top 2 cards of your Deck to the Graveyard. Then, if you activated this effect during your Main Phase that you Normal Summoned or Special Summoned this card, you can Special Summon 1 Level 6 or lower Beast-Warrior Type Normal Monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -74384,7 +74384,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase that you Normal or Special Summoned this card.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -76688,7 +76688,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase that you Normal or Special Summoned this card.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -78326,7 +78326,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You Normal Summoned this card this turn and have another face-up Dragon Type monster on your field.
+    You Normal Summoned this card this turn and you have a face-up Dragon Type monster other than this card on your field.
   de:
   es:
   fr:
@@ -80511,7 +80511,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -81678,7 +81678,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up monster with 500 DEF on your field, send 1 face-up monster with 500 DEF from your field to the Graveyard.
+    If you have a face-up monster with 500 DEF on your field other than this card, send 1 face-up monster with 500 DEF from your field to the Graveyard.
   de:
   es:
   fr:
@@ -82868,7 +82868,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up Level 5 Zombie Type monster on your field, pay 500 LP.
+    If you have a face-up Level 5 Zombie Type monster on your field other than this card, pay 500 LP.
   de:
   es:
   fr:
@@ -83077,7 +83077,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase that you Normal or Special Summoned this card, place 1 card from your hand on the bottom of the Deck.
+    During your Main Phase that you Normal Summoned or Special Summoned this card, place 1 card from your hand on the bottom of the Deck.
   de:
   es:
   fr:
@@ -87315,7 +87315,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have another face-up LIGHT Attribute Machine Type monster on your field.
+    You have a face-up LIGHT Attribute Machine Type monster other than this card on your field.
   de:
   es:
   fr:
@@ -89474,7 +89474,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up Dinosaur Type monster on your field, send the top card of your Deck to the Graveyard.
+    If you have a face-up Dinosaur Type monster on your field other than this card, send the top card of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -90497,7 +90497,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have another face-up LIGHT Attribute monster with 1400 or less ATK on your field.
+    You have a face-up LIGHT Attribute monster with 1400 or less ATK other than this card on your field.
   de:
   es:
   fr:
@@ -90530,8 +90530,8 @@ level: 4
 atk: 1400
 def: 200
 series:
-- Transamu
 - Signature move
+- Transamu
 images:
 - index: 1
   image: TransamuRainacWarToZen-RDDD02-JP-ScR.png
@@ -90870,7 +90870,7 @@ summoning_condition:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned, place 1 card from your hand on top of the Deck.
+    During your Main Phase that you Normal Summoned or Special Summoned this card, place 1 card from your hand on top of the Deck.
   de:
   es:
   fr:
@@ -91128,7 +91128,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent draws 1 card and shows it. Then, if that card is a monster, this card gains ATK equal to [the shown monster's ATK] until the end of this turn.
+    Your opponent draws 1 card and shows it. If that card is a monster, this card gains ATK equal to [the shown monster's ATK] until the end of this turn.
   de:
   es:
   fr:
@@ -91834,7 +91834,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You Normal Summoned this card this turn and have another face-up DARK Attribute monster on your field.
+    You Normal Summoned this card this turn and you have a face-up DARK Attribute monster other than this card on your field.
   de:
   es:
   fr:
@@ -93153,7 +93153,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -93557,7 +93557,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card and show it. Then, if that card is a Pyro Type monster, you can Special Summon 1 Level 8 or lower Pyro Type monster from your Graveyard face-up to your field.
+    Draw 1 card and show it. If that card is a Pyro Type monster, you can Special Summon 1 Level 8 or lower Pyro Type monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -97304,7 +97304,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have another face-up Fiend Type monster on your field.
+    You have a face-up Fiend Type monster other than this card on your field.
   de:
   es:
   fr:
@@ -99092,7 +99092,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up Beast Type monster on your field, place 1 Beast Type monster from your Graveyard on top of the Deck.
+    If you have a face-up Beast Type monster on your field other than this card, place 1 Beast Type monster from your Graveyard on top of the Deck.
   de:
   es:
   fr:
@@ -102386,7 +102386,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have "Blue Tooth Burst Dragon" or "Red Boot Boost Dragon" face-up on your field during your Main Phase this card was Normal or Special Summoned.
+    You have "Blue Tooth Burst Dragon" or "Red Boot Boost Dragon" face-up on your field during your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -102457,7 +102457,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned, reveal 1 "Blue Tooth Burst Dragon" or 1 "Red Boot Boost Dragon" in your hand to your opponent.
+    During your Main Phase that you Normal Summoned or Special Summoned this card, reveal 1 "Blue Tooth Burst Dragon" or 1 "Red Boot Boost Dragon" in your hand to your opponent.
   de:
   es:
   fr:
@@ -106458,7 +106458,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Gain 800 LP. Then, draw 1 card and show it. Then, if that card is a Galaxy Type Normal Monster with 1600 or more ATK, negate the attack.
+    Gain 800 LP. Then, draw 1 card and show it. If that card is a Galaxy Type Normal Monster with 1600 or more ATK, negate the attack.
   de:
   es:
   fr:
@@ -107703,7 +107703,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up WIND Attribute Winged Beast Type monster on your field, send 1 card from your hand to the Graveyard.
+    If you have a face-up WIND Attribute Winged Beast Type monster on your field other than this card, send 1 card from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -108582,7 +108582,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have another face-up Warrior Type monster on your field during the turn you Normal Summoned this card.
+    You Normal Summoned this card this turn and you have a face-up Warrior Type monster other than this card on your field.
   de:
   es:
   fr:
@@ -110072,7 +110072,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 3 cards and show them. Then, if a Level 7 or higher monster is among them, you can Special Summon any number of those Level 7 or higher monsters to your field in face-down Defense Position.
+    Draw 3 cards and show them. If a Level 7 or higher monster is among them, you can Special Summon any number of those Level 7 or higher monsters to your field in face-down Defense Position.
   de:
   es:
   fr:
@@ -111778,7 +111778,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -111906,7 +111906,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have another face-up Reptile Type monster on your field, pay 300 LP.
+    If you have a face-up Reptile Type monster on your field other than this card, pay 300 LP.
   de:
   es:
   fr:
@@ -113053,7 +113053,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 3 or more Galaxy Type monsters in your Graveyard during your Main Phase this card was Normal or Special Summoned.
+    You have 3 or more Galaxy Type monsters in your Graveyard during your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -113177,7 +113177,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -115194,7 +115194,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -115324,7 +115324,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned, send 2 face-up Level 4 or lower Effect Monsters from your field to the Graveyard.
+    During your Main Phase that you Normal Summoned or Special Summoned this card, send 2 face-up Level 4 or lower Effect Monsters from your field to the Graveyard.
   de:
   es:
   fr:
@@ -116432,7 +116432,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have another face-up WIND Attribute Spellcaster Type monster on your field during a turn you have not activated the effect of "Cyc the Child of Wind".
+    You have a face-up WIND Attribute Spellcaster Type monster other than this card on your field during a turn you have not activated the effect of "Cyc the Child of Wind".
   de:
   es:
   fr:
@@ -117792,7 +117792,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -118407,7 +118407,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -118469,7 +118469,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Normal or Special Summoned.
+    During your Main Phase that you Normal Summoned or Special Summoned this card.
   de:
   es:
   fr:
@@ -120714,6 +120714,66 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1019464
+---
+konami_id:
+name:
+  en: Dark Effigy
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This face-up card can be treated as 2 Tributes for the Tribute Summon of a DARK Attribute Normal Monster in Attack Position.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 4
+atk: 1500
+def: 0
+images:
+- index: 1
+  image: DarkEffigy-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP032
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1020896
 ---
 konami_id:
 name:
