--- a/rush.yaml
+++ b/rush.yaml
@@ -32411,28 +32411,28 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a Level 6 or higher monster(s) face-up, and you have a face-up "Summoned Skull" or a face-up Level 7 or higher Fiend Type Normal Monster on your field.
+    When your opponent Normal or Special Summons a Level 6 or higher monster(s) face-up while you have a face-up "Summoned Skull" or a face-up Level 7 or higher Fiend Type Normal Monster on your field.
   de:
   es:
   fr:
   it:
   pt:
   ja: |-
-    【条件】自分フィールドに表側表示の「デーモンの召喚」または表側表示の通常モンスター（レベル７以上／悪魔族）がいる場合、相手がモンスター（レベル６以上）を表側表示で召喚・特殊召喚した時に発動できる。
+    自分フィールドに表側表示の「デーモンの召喚」または表側表示の通常モンスター（レベル７以上／悪魔族）がいる場合、相手がモンスター（レベル６以上）を表側表示で召喚・特殊召喚した時に発動できる。
   ko: |-
     자신 필드에 앞면 표시의 "데몬 소환" 또는 앞면 표시의 일반 몬스터(레벨 7 이상 / 악마족)가 있을 경우, 상대가 몬스터(레벨 6 이상)를 앞면 표시로 일반 소환 / 특수 소환했을 때에 발동할 수 있다.
   zh-TW:
   zh-CN:
 effect:
   en: |-
-    You take damage equal to [the number of monsters in your opponent's Graveyard] x 100. Then, shuffle all monsters from your opponent's Graveyard into the Deck.
+    Take damage equal to [the number of monsters in your opponent's Graveyard] x 100. Then, shuffle all monsters from your opponent's Graveyard into the Deck.
   de:
   es:
   fr:
   it:
   pt:
   ja: |-
-    【効果】自分は［相手の墓地のモンスターの数］×１００ダメージを受ける。その後、相手の墓地のモンスターを全てデッキに戻す。
+    自分は［相手の墓地のモンスターの数］×１００ダメージを受ける。その後、相手の墓地のモンスターを全てデッキに戻す。
   ko: |-
     자신은 [상대 묘지의 몬스터의 수] × 100 데미지를 받는다. 그 후, 상대 묘지의 몬스터를 전부 덱으로 되돌린다.
   zh-TW:
