--- a/data/rush/17936.yaml
+++ b/data/rush/17936.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Special Summons a monster.
+    When your opponent Special Summons a monster(s).
   de:
   es:
   fr:
