--- a/data/rush/19571.yaml
+++ b/data/rush/19571.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. You can only Normal or Special Summon Celestial Warrior, Warrior, or Fairy Type monsters for the rest of this turn.
+    Draw 1 card. You can only Normal or Special Summon Celestial Warrior Type, Warrior Type, or Fairy Type monsters for the rest of this turn.
   de:
   es:
   fr:
