--- a/rush.yaml
+++ b/rush.yaml
@@ -77513,7 +77513,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Special Summons a monster.
+    When your opponent Special Summons a monster(s).
   de:
   es:
   fr:
@@ -110988,7 +110988,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Return 1 other face-up Level 5 or higher EARTH Attribute Machine Type monster from your field to the owner's hand.
+    Return 1 face-up Level 5 or higher EARTH Attribute Machine Type monster other than this card from your field to the owner's hand.
   de:
   es:
   fr:
@@ -117588,7 +117588,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Level 4 or lower Warrior or Fairy Type monster from your Graveyard to your hand. Then, you can Set 1 "Fusion" or 1 "Divine Transformation" from your Graveyard in your Spell & Trap Zone.
+    Add 1 Level 4 or lower Warrior Type or Fairy Type monster from your Graveyard to your hand. Then, you can Set 1 "Fusion" or 1 "Divine Transformation" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
@@ -117743,7 +117743,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw 1 card. You can only Normal or Special Summon Celestial Warrior, Warrior, or Fairy Type monsters for the rest of this turn.
+    Draw 1 card. You can only Normal or Special Summon Celestial Warrior Type, Warrior Type, or Fairy Type monsters for the rest of this turn.
   de:
   es:
   fr:
